--- a/public/assets/config.yml
+++ b/public/assets/config.yml
@@ -174,5 +174,10 @@ services:
       - name: "Dynmap"
         icon: "fas fa-map"
         subtitle: "mc.zekro.de"
-        keywords: "minecraft dynmap ichigo"
+        keywords: "minecraft game dynmap ichigo"
         url: "https://mc.zekro.de"
+      - name: "mc.zekro.de"
+        subtitle: "Public Vanilla Minecraft Server"
+        logo: "assets/tools/minecraft.png"
+        keywords: "minecraft game ichigo"
+        url: "javascript:navigator.clipboard.writeText('mc.zekro.de')&&alert('Address has been copied to the clipboard.')"
