--- a/public/assets/config.yml
+++ b/public/assets/config.yml
@@ -180,4 +180,11 @@ services:
         subtitle: "Public Vanilla Minecraft Server"
         logo: "assets/tools/minecraft.png"
         keywords: "minecraft game ichigo"
-        url: "javascript:navigator.clipboard.writeText('mc.zekro.de')&&alert('Address has been copied to the clipboard.')"
+        tag: "Click to Copy to Clipboard"
+        url: "javascript:navigator.clipboard.writeText('mc.zekro.de')"
+      - name: "Factorio"
+        subtitle: "Private Factorio Server"
+        logo: "assets/tools/factorio.png"
+        keywords: "factorio game ichigo"
+        tag: "Click to Copy to Clipboard"
+        url: "javascript:navigator.clipboard.writeText('zekro.de:34197')"
