--- a/assets/config.yml
+++ b/assets/config.yml
@@ -174,5 +174,17 @@ services:
       - name: "Dynmap"
         icon: "fas fa-map"
         subtitle: "mc.zekro.de"
-        keywords: "minecraft dynmap ichigo"
+        keywords: "minecraft game dynmap ichigo"
         url: "https://mc.zekro.de"
+      - name: "mc.zekro.de"
+        subtitle: "Public Vanilla Minecraft Server"
+        logo: "assets/tools/minecraft.png"
+        keywords: "minecraft game ichigo"
+        tag: "Click to Copy to Clipboard"
+        url: "javascript:navigator.clipboard.writeText('mc.zekro.de')"
+      - name: "Factorio"
+        subtitle: "Private Factorio Server"
+        logo: "assets/tools/factorio.png"
+        keywords: "factorio game ichigo"
+        tag: "Click to Copy to Clipboard"
+        url: "javascript:navigator.clipboard.writeText('zekro.de:34197')"
